4_Microservice_architecture/11-kubernetes-12/src/task_1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-multitool
  labels:
    app: nginx-multitool
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-multitool
  template:
    metadata:
      labels:
        app: nginx-multitool
    spec:
      containers:
      - name: nginx
        image: nginx:1.24
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: index-volume
          mountPath: /usr/share/nginx/html
      - name: multitool
        image: praqma/network-multitool:latest
        imagePullPolicy: IfNotPresent
      volumes:
      - name: index-volume
        configMap:
          name: nginx-index

---
apiVersion: v1
kind: Service
metadata:
  name: nodeport
  namespace: default
spec:
  ports:
  - name: nginx-nodeport
    port: 80
    protocol: TCP
    nodePort: 32200 
  selector:
    app: nginx-multitool
  type: NodePort

---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: multitool-pod
  name: multitool-pod
  namespace: default
spec:
  containers:
  - image: praqma/network-multitool:latest
    name: multitool-pod
    imagePullPolicy: IfNotPresent
